--- a/index.html
+++ b/index.html
@@ -86,5 +86,7 @@
     <footer>
         <p>&copy; 2023 My Business. All rights reserved.</p>
     </footer>
+    <script src="//code.tidio.co/4pchl4sahfguyclkznv3hk9rrxbdtsle.js" async></script>
 </body>
 </html>
+
